--- a/src/app/merchantregistration/merchantregistration.component.html
+++ b/src/app/merchantregistration/merchantregistration.component.html
@@ -1,4 +1,5 @@
 <app-merchant-header></app-merchant-header>
+<div class="head"><h1>Merchant Registration</h1></div>
 <div class="container">
     <form action="" method="post" class="mRegister_form" target="_blank">
         <input type="text" placeholder="Restaurant Name" id="m_name" [(ngModel)] = "registerModel.m_name" [ngModelOptions]="{standalone: true}">
