--- a/src/app/merchant-store/merchant-store.component.html
+++ b/src/app/merchant-store/merchant-store.component.html
@@ -38,4 +38,6 @@
             <div class="row9_col1"><button>Edit</button></div>
         </div>
     </div>
+
 </div>
+<app-store-reviews></app-store-reviews>
