--- a/src/app/store-reviews/store-reviews.component.html
+++ b/src/app/store-reviews/store-reviews.component.html
@@ -1,4 +1,4 @@
-<app-merchant-header></app-merchant-header>
+<!-- <app-merchant-header></app-merchant-header> -->
 <div class="container">
     <div class="head">
         <div class="heading">
