--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,27 +1,31 @@
-<section class="heading">
-    <div class="head">
-    <!--<div class="sub_head1">
-        <img src="assets\logo2.png" alt="logo" height="90%" width="90%">
-    </div>
--->
-    <!---
-    <div class="sub_head2">
-        <ul class="navbar">
-            <li class="home"><a href="#">Home</a></li>
-            <li class="search"><a href="#">Search</a></li>
-            <li class="contact"><a href="#">Contact</a></li>
 
-        </ul>
+<div class="container">
+    <div class="box1">
+      <img
+        src="assets/logo.png"
+        alt="Logo"
+        height="100%"
+        width="40%"
+        class="logo"
+      />
     </div>
-    -->
-    <div class="sub_head3">
-        <div class="main">
-            <a  class="user" (click)="gotToLogin()">
-                <span class="material-symbols-outlined">person</span>
-                Sign-In
-            </a>
-            <a href="#" class="register">Register</a>
-        </div>
+    <div class="box2">
+      <div class="box2_col1">
+      </div>
+      <div class="box2_col2">
+      </div>
+      <div class="box2_col3">
+      </div>
+      <div class="box2_col4">
+      </div>
     </div>
+    <div class="box3">
+      <div class="box3_col1">
+        <button  class="user" (click)="gotToLogin()">
+            <span class="material-symbols-outlined">person</span>
+            <span>Sign-In</span>
+        </button>
+      </div>
     </div>
-</section>
+  </div>
+  
