--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -16,9 +16,8 @@
 }
 .right{
     
-    width: 30vw;
-    min-height: 100vh;
-    
+    width: 20vw;
+    height: 20vh;    
 }
 .search{
     width: 100%;
@@ -267,11 +266,14 @@ button{
 
 .display{
 
-    height: 75vh;
-    width: 70vw;
+    height: 58vh;
+    width: 85vw;
     position: relative;
     top: -4vh; 
     padding-left: 1.5vw;
+    overflow: scroll;
+    z-index: 200;
+    margin-left: 5vw;
     
 }
 
@@ -283,27 +285,11 @@ button{
     border: 1px solid rgb(207, 207, 207);
     box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
     margin: 1.2vw;
+    margin-left: 4vw;
 
 }
 
-/*
-.result_box2 {
-    height: 50vh;
-    width: 30%;
-    border-radius: 5%;
-    border: 1px solid rgb(207, 207, 207);
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
-    padding: 1%;
-}
-.result_box3 {
-    height: 50vh;
-    width: 30%;
-    border-radius: 5%;
-    border: 1px solid rgb(207, 207, 207);
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
-    padding: 1%;
-    margin-left: 2%;
-}*/
+
 .r1{
     width: 20vw;
     height: 30vh;
@@ -315,7 +301,8 @@ button{
 .r1_pic{
     width: 19vw;
     height: 27vh;
-    border-radius: 2vw;}
+    border-radius: 2vw;
+}
 .r1_img{
     border-radius: 1vw;
 }
@@ -424,6 +411,11 @@ button{
     font-size: 1.2vw;
     
 }
+
+.result_button{
+    border-radius: 2vw;
+    background-color: transparent;
+}
 /*results box css ends here*/
 
 /*Search bar css starts here*/
@@ -456,11 +448,11 @@ button{
 }
 .search_bar input{
     width: 30vw;
-    height: 5vh;
+    height: 2vh;
     background: transparent;
-    border: 0;
+    border: none;
     flex: 1;
-    font-size: 20px;
+    font-size: 1.5vw;
     padding: 10% 5%;
     outline: none;
 }
@@ -492,52 +484,9 @@ button{
 }
 /* search bar css ends here*/
 
-/*user box css starts here*/
-.right_box1{
-    height: 23.5vh;
-    width: 28vw;
-    display: flex;
-    align-items:self-start;
-    justify-content:flex-end;
-}
-.user_box{
-    height: 10vh;
-    width: 10vw;
-    display: flex;
-    align-items:center;
-    justify-content:center;
-    
-}
-.user_box button{
-    height: 8vh;
-    width: 8vw;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10vw;
-    background-color: white;
-    
-}
-.user_box span{
-    font-size: 1.5vw;
-    color: #E94b3cff;
-}
-.user_box button:hover{
-    color: #E94b3cff;
-    box-shadow: 2px 2px 10px #E94b3cff;
-    transition: all 0.5s ease-in-out;
-}
-
-.result_button{
-    background-color: transparent;
-    border-radius: 1vw;
-    border: none;
-    outline: none;
-}
 
 
-/*user box css ends here*/
+
 
 /*side details card popup container starts here*/
 /*.details_box_component{
