--- a/src/app/merchant-list/merchant-list.component.css
+++ b/src/app/merchant-list/merchant-list.component.css
@@ -1,24 +1,163 @@
+/*Css for table starts here*/
+.container {
+  height: 90vh;
+  width: 90vw;
+  margin-left: 5vw;
+}
 table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  }
+  font-family: Helvetica;
+  border-collapse: collapse;
+}
+.table-container {
+  overflow: scroll;
+  width: 80vw;
+  height: 60vh;
+  margin-left: 5vw;
+}
 
-.head{
-  width: 100vw;
+td {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+  font-size: 1vw;
+}
+th {
+  border: 2px solid #dddddd;
+  text-align: center;
+  color: white;
+  padding: 20px;
+  box-sizing: border-box;
+  font-size: 1.54vw;
+}
+
+thead th {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+}
+.store-btn{
+  outline: none;
+  border: none;
+  background-color: white;
+  font-size: 1.5vw;
+  cursor: pointer;
+  font-weight: 500;
+}
+.action-btn{
+  margin-left: 1vw;
+  outline: none;
+  border: none;
+  background-color: white;
+
+}
+
+/*Css for table starts here*/
+
+/*Table heading css starts here*/
+.head {
   height: 15vh;
-  font-size: 2vw;
+  width: 90vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5vw;
+  color: #00203fff;
+}
+.heading1 {
+  background-color: #e94b3cff;
+}
+
+/*Table heading css ends here*/
+
+.table_search{
+  height: 10vh;
+  width: 90vw;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
+.search_box{
+  height: 5vh;
+  width: 15vw;
+  margin-left: 5.5vw;
+  border-radius: 0.5vw;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+  border: 1px solid rgb(207, 207, 207);
+  padding-left: 1vw;
+}
+placeholder{
+  font-size: 1.25vw;
+  color: red;
+}
+.search_btn{
+  height: 3vh;
+  width: 4vw;
+  margin-left: 0.5vw;
+  border-radius: 0.25vw;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+  border: 1px solid rgb(207, 207, 207);
+  font-size: 1vw;
+  background-color: white;
+}
+
+/*Css for slider starts here*/
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #e94b3cff;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #32751d;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+/*Css for slider ends here*/
