--- a/src/app/merchant-store/merchant-store.component.html
+++ b/src/app/merchant-store/merchant-store.component.html
@@ -1,43 +1,157 @@
 <app-merchant-header></app-merchant-header>
 <div class="container">
-    <div class="display_box" *ngFor="let storeItem of merchantDetails; let i=index">
-        <div class="row1"><h1>{{storeItem.m_name}}</h1></div>
-        <div class="row2">
-            <div class="row2_col1" class="cold">Open Time: {{storeItem.m_open_time}}</div>
-            <div class="row2_col2" class="cold">Close Time: {{storeItem.m_close_time}}</div>
-            <div class="row2_col3" class="cold">Status: {{storeItem.m_status}}</div>
-            <div class="row2_col4" class="cold">Experience: {{storeItem.m_experience}}</div>
+    <!--<div class="heading">
+        <h1>Store Details</h1>
+    </div>-->
+    <div class="display_box" *ngFor="let storeItem of merchantDetails; let i = index">
+        <div class="box1">
+            <div class="box1_col1">
+                <span><h1>{{storeItem.m_name}}</h1></span>
+            </div>
         </div>
-        <div class="row3">
-            <div class="row3_col1" class="col">Categories: {{storeItem.m_categories}}</div>
-            <div class="row3_col2" class="col">Services: {{storeItem.m_services}}</div>
-            <div class="row3_col3" class="col">Cusines: {{storeItem.m_cusines}}</div>
+        <div class="box3">
+            <div class="box3_col1">
+                <div class="box">Rating:{{storeItem.m_rating}}</div>
+            </div>
+            <div class="box3_col2">
+                <div class="box">Status:{{storeItem.m_status}}</div>
+            </div>
+            <div class="box3_col3">
+                <div class="box">No. Of Reviews:{{storeItem.m_rating_count}}</div>
+            </div>
         </div>
-        <div class="row4">
-            <div class="row4_col1" class="col">Area: {{storeItem.m_area}}</div>
-            <div class="row4_col2" class="col">Street: {{storeItem.m_street}}</div>
-            <div class="row4_col3" class="col">City: {{storeItem.m_city}}</div>
-        </div>
-        <div class="row5">
-            <div class="row5_col1" class="col">Pincode: {{storeItem.m_pincode}}</div>
-            <div class="row5_col2" class="col">Latitude: {{storeItem.m_latitude}}</div>
-            <div class="row5_col3" class="col">Longitude: {{storeItem.m_longitude}}</div>
-        </div>
-        <div class="row6">
-            <div class="row6_col1" class="col">Min Price: {{storeItem.m_min_price}}</div>
-            <div class="row6_col2" class="col">Max Price: {{storeItem.m_max_price}}</div>
-            <div class="row6_col3" class="col">Specials: {{storeItem.m_specials}}</div>
-        </div>
-        <div class="row7">
-            <div class="row7_col1" class="col">Rating: {{storeItem.m_rating}}</div>
-            <div class="row7_col2" class="col">Number of Reviews: {{storeItem.m_rating_count}}</div>
-        </div>
-        <div class="row8">Address: {{storeItem.m_address}}</div>
-        <div class="row9">
-            <div class="row9_col1"><button (click)="goToAdminMerchantReviews(storeItem)">Reviews</button></div>
-            <div class="row9_col1"><button>Edit</button></div>
-        </div>
-    </div>
 
+        <div class="box2">
+            <div class="sub1_box2">
+                <form action="">
+                <div class="sub1_box2_row1">
+                    <div class="col">
+                        <label for=""><span>Open Time:</span>
+                            <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_open_time}}">
+                        </label>
+                    </div>
+                    <div class="col">
+                        <label for=""><span>Specials:</span>
+                            <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_specials}}">
+                        </label>
+                    </div>
+                </div>
+                <div class="sub1_box2_row2">
+                    <div class="col">
+                        <label for=""><span>Close Time:</span>
+                            <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_close_time}}">
+                        </label>
+                    </div>
+                    <div class="col">
+                        <label for=""><span>Services:</span>
+                            <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_services}}">
+                        </label>
+                    </div>
+                </div>
+                <div class="sub1_box2_row3">
+                    <div class="col">
+                        <label for=""><span>Min Price:</span>
+                            <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_min_price}}">
+                        </label>
+                    </div>
+                    <div class="col">
+                        <label for=""><span>Cusines:</span>
+                            <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_cusines}}">
+                        </label>
+                    </div>
+                </div>
+                <div class="sub1_box2_row4">
+                    <div class="col">
+                        <label for=""><span>Max Price:</span>
+                            <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_max_price}}">
+                        </label>
+                    </div>
+                    <div class="col">
+                        <label for=""><span>Categories</span>
+                            <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_categories}}">
+                        </label>
+                    </div>
+                </div>
+                <div class="sub1_box2_row5">
+                    <input type="submit" name="" id="" value="Edit" class="sbt_btn">
+                </div>
+                </form>
+            </div>
+            <div class="sub2_box2">
+                <form action="">
+                <div class="sub2_box2_row1">
+                    <div class="col">
+                        <label for=""><span>Street:</span>
+                            <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_street}}">
+                        </label>
+                    </div>
+                    <div class="col">
+                        <label for=""><span>Area:</span>
+                            <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_area}}">
+                        </label>
+                    </div>
+                </div>
+                <div class="sub2_box2_row2">
+                    <div class="col">
+                        <label for=""><span>
+                            City:
+                        </span>
+                            <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_city}}">
+                        </label>
+                    </div>
+                    <div class="col">
+                        <label for=""><span>
+                            Pincode:
+                        </span>
+                        <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_pincode}}">
+                        </label>
+                    </div>
+                </div>
+                <div class="sub2_box2_row3">
+                    <div class="col">
+                        <label for=""><span>
+                            Latitude:
+                        </span>
+                        <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_latitude}}">
+                        </label>
+                    </div>
+                    <div class="col">
+                        <label for=""><span>
+                            Longitude:
+                        </span>
+                        <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_longitude}}">
+                        </label>
+                    </div>
+                </div>
+                <div class="sub2_box2_row4">
+                    <div class="col1">
+                        <label for=""><span>Address:</span>
+                            <br>
+                            <input type="text" name="" id="" value="{{storeItem.m_address}}">
+                        </label>
+                    </div>
+                </div>
+                <div class="sub2_box2_row5">
+                    <input type="submit" name="" id="" value="Edit" class="sbt_btn">
+                </div>
+                </form>
+            </div>
+        </div>
+
+    </div>
 </div>
 <app-store-reviews></app-store-reviews>
