--- a/src/app/merchant-users/merchant-users.component.css
+++ b/src/app/merchant-users/merchant-users.component.css
@@ -1,13 +1,15 @@
 .container{
     height: 90vh;
-    width: 100vw;
+    width: 90vw;
+    margin-left: 5vw;
 }
 .head{
     height: 10vh;
-    width: 100vw;
+    width: 80vw;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 5vw;
 
 }
 table {
@@ -19,10 +21,14 @@ table {
   th {
     border: 1px solid #dddddd;
     text-align: center;
-    padding: 8px;
+    padding: 1.5vw;
+    background-color: #e94b3cff;
+    font-size: 1.5vw;
+    color: white;
   }
   td{
     border: 1px solid #dddddd;
     text-align: center;
     padding: 1.5vw;
+    font-size: 1.25vw;
   }
