--- a/src/app/merchantregistration/merchantregistration.component.css
+++ b/src/app/merchantregistration/merchantregistration.component.css
@@ -1,25 +1,114 @@
 .container{
-    min-width: 90vw;
-    min-height: 90vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.mRegister_form{
-    background-color: white;
-    min-height: 88vh;
-    min-width: 88vw;
-    padding: 2vw;
-}
-input{
-    height: 6vh;
-    width: 20vw;
-    margin-left: 10vw;
+    width: 100vw;
+    height: 90vh;
 }
 .head{
     height: 15vh;
-    width: 100vw;
+    width: 90vw;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: 5vw;
+    font-size: 1.5vw;
+    color: #00203fff;
+}
+.merchant_form{
+    margin-left: 10vw;
+    width: 80vw;
+    border: 3px solid rgb(207, 207, 207);
+    border-radius: 0.5vw;
+    padding-top: 7vh;
+    padding-bottom: 4vh;
+
+}
+.row1,.row2,.row3,.row4{
+    height: 10vh;
+    width: 70vw;
+    display: flex;
+    margin-left: 5vw;
+}
+.row5{
+    height: 10vh;
+    width: 70vw;
+    display: flex;
+    align-items: center;
+    margin-left: 5vw;
+    
+}
+.col{
+    height: 10vh;
+    width: 17vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.col input{
+    height: 7vh;
+    width: 15vw;
+    border-radius: 0.5vw;
+    outline: none;
+    border: 2px solid rgb(207, 207, 207);
+    padding-left: 1vw;
+}
+.row5_col1{
+    height: 10vh;
+    width: 33vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.row5_col1 input{
+    height: 7vh;
+    width: 40vw;
+    border-radius: 0.5vw;
+    border: 2px solid rgb(207, 207, 207);
+    padding-left: 1vw;
+    outline: none;
+    margin-left: 0.75vw;
+}
+
+
+
+/*css for buttons*/
+.row5_col2{
+    height: 10vh;
+    width: 10vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 6.75vw;
+}
+.row5_col3{
+    height: 10vh;
+    width: 10vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.row5_col2 input{
+    height: 7vh;
+    width: 8vw;
+    font-size: 1.2vw;
+    font-weight: bolder;
+    border-radius: 1vw;
+    outline: none;
+    background-color: #e94b3cff;
+    color: #00203fff;
+    border: none;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+
+}
+.row5_col3 input{
+    height: 7vh;
+    width: 8vw;
+    font-size: 1.2vw;
+    font-weight: bolder;
+    border-radius: 1vw;
+    outline: none;
+    background-color: #e94b3cff;
+    color: #00203fff;
+    border: none;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    /*border: 3px solid rgb(207, 207, 207);*/
 }
